change backend url

--- a/development.env
+++ b/development.env
@@ -1,1 +1,2 @@
-BACKEND_URL=https://course-js.javascript.ru/
+# BACKEND_URL=http://localhost:3000/
+BACKEND_URL=https://api-online-editor.bootcamp.place/
